Add python/django logo

--- a/styles/style.css
+++ b/styles/style.css
@@ -237,4 +237,48 @@ section {
       section footer a.email {
         background: url(../images/email.svg); }
 
+
+.proba {
+    background-color: rgba(255, 255, 255, 0.25);
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    flex: 0 0 auto;
+    justify-content: center;
+    align-self: center;
+    height: 1px;
+    border: 0 none;
+}
+
+ /* Three image containers (use 25% for four, and 50% for two, etc) */
+.row-logo {
+  justify-content: center; /* align horizontal */
+  height: 50px;
+  display:flex;
+  padding: 20px 0;
+  border-top: 1px solid rgba(255, 255, 255, .25);
+  width: 1000px;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 1023px) {
+  .row-logo {
+    width: 100%;
+  }
+}
+
+.row-logo img{
+  height: 50px;
+}
+
+.row-logo img:first-of-type {
+  margin-right: 30px;
+}
+
+img {
+    max-width:100%;
+    max-height:100%;
+}
+
+
 /*# sourceMappingURL=style.css.map */
