--- a/styles/style.scss
+++ b/styles/style.scss
@@ -361,3 +361,31 @@ section {
     }
 }
 
+.row-logo {
+  justify-content: center; /* align horizontal */
+  min-height: 50px;
+  display:flex;
+  padding: 20px 0;
+  border-top: 1px solid rgba(255, 255, 255, .25);
+  width: 1000px;
+  margin: 0 auto;
+  @media only screen and (max-width: 1023px) {
+    width: 100%;
+  }
+}
+
+.row-logo {
+    .link-logo:nth-of-type(1) {
+        background: url(../images/django-logo.svg) no-repeat center center;
+    }
+    .link-logo:nth-of-type(2) {
+        background: url(../images/python-logo.svg) no-repeat center center;
+    }
+}
+
+.link-logo{
+    background-size: contain;
+    width: 200px;
+    height: 50px;
+    display: block;
+ }
